--- a/PegadaChave/PegadaChave.csproj
+++ b/PegadaChave/PegadaChave.csproj
@@ -174,6 +174,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CarrinhoController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -230,6 +231,7 @@
     <Content Include="Content\CheckoutStyle.css" />
     <Content Include="Content\fontes\demo.html" />
     <Content Include="Content\fontes\fontes.css" />
+    <Content Include="Content\CarrinhoStyle.css" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\BlusaPumaBranca.jpg" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\BlusinhaBrancaPrada.jpg" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\bolsa.png" />
@@ -364,6 +366,7 @@
     <Content Include="Views\Products\Index.cshtml" />
     <Content Include="Views\Checkout\Index.cshtml" />
     <Content Include="Views\ProductDetail\Index.cshtml" />
+    <Content Include="Views\Carrinho\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
