--- a/PegadaChave/Web.config
+++ b/PegadaChave/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MySqlConnection" connectionString="Server=localhost;Port=3306;Database=bdBillyDuke;User Id=root;Password=12345678;" providerName="MySql.Data.MySqlClient" />
+    <add name="MySqlConnection" connectionString="Server=localhost;Port=3306;Database=bdBillyDuke;User Id=root;Password=;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
